--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "mesto-react",
   "version": "0.1.0",
+  "description": "Проект mesto :Создан с помощью библиотеки React.js, лендинг состоит и 4 экранов: шапка сайта, профиль человека с кнопками редактирования и добавления, 6 карточек с фотографиями заголовком и кнопками \"Like\" и \"Delete\", подвалом сайта.\r * на странице есть модальные окна с возможностью редактирование профиля и добавления карточек.",
+  "author": "Tihonov Sergey",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +33,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/STihn/mesto-react.git"
+  },
+  "homepage": "https://stihn.github.io/mesto-react/"
 }
